<?xml version="1.0"?>
<package format="3">
  <name>free_fleet_ros1</name>
  <version>1.0.0</version>
  <description>Free fleet ROS 1 implementations</description>
  <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <depend>free_fleet</depend>
  <depend>free_fleet_cyclonedds</depend>
</package>
