<?xml version="1.0"?>
<package format="2">
  <name>ff_rviz_plugins_msgs</name>
  <version>0.0.1</version>
  <description>A package containing messages to work with the free fleet panel</description>
  <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
  <license>Apache 2.0</license>
  <author email="aaron@openrobotics.org">Aaron Chong</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
</package>
