<?xml version="1.0"?>
<package format="3">
  <name>free_fleet_ui</name>
  <version>0.0.1</version>
  <description>Free Fleet Management User Interface</description>
  <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
  <license>Apache 2.0</license>
  <author email="aaron@openrobotics.org">Aaron Chong</author>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend>cyclonedds</depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
